# LLM-Inference-Engine-in-Rust

./: Cargo.toml  README.md
src/: config.rs  device.rs  error.rs  generation.rs  main.rs  sampling.rs  tokenizer.rs
src/api/: mod.rs  routes.rs  types.rs
src/model/: gemma.rs  gemma2.rs  gemma3.rs  loader.rs  mistral.rs  mod.rs
